--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -1,6 +1,7 @@
 <div id="sidebar">
   <ul>
     <li><a href="/">Accueil</a></li>
+    <li><a href="/patient/home">Patients</a></li>
     <li><a href='/autres'>autres</a></li>
     <!-- Ajoutez d'autres liens du menu ici -->
   </ul>
