--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,12 +1,12 @@
 <%- include('header') %>
-<div id="container">
-    <%- include('sidebar') %>
 
-        <div id="content" class="error">
+<div id="container" class="d-flex flex-column align-items-center text-center mt-5 pt-5">
+    <div class="row">
+        <div class="col-12">
             <h1>Erreur 404</h1>
-            <h2>Cette page est indisponible..</h2>
-            
+            <h2>Cette page est indisponible.</h2> 
         </div>
+    </div>
 </div>
 
 <%- include('footer'); %>
