--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,24 +1,3 @@
-<footer id="footer" class="collapsed">
-    <p>Lucas PERBET - 2023</p>
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-  <img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />
-Cette œuvre est mise à disposition selon les termes de la 
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-  Licence Creative Commons Attribution -  Partage dans les Mêmes Conditions 4.0 International</a>
-
-    
-    
-  </footer>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const footer = document.getElementById('footer');
-  
-      // Ajoute un gestionnaire d'événement pour basculer le footer lorsqu'il est cliqué
-      footer.addEventListener('click', function () {
-        this.classList.toggle('collapsed');
-      });
-    });
-  </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
