--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,6 +7,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/style.css">
   <title>Pharmacie Sautheuze</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
 
 <body>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-success">
+      <div class="container-fluid">
+          <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="menu">
+  
+              <ul class="navbar-nav d-flex align-items-lg-center">
+                <div class="w-25 float-start"><!--mx-auto = centrer l'img sur l'axe des x -->
+                  <img class="img-fluid img-start mx-4"  src="/img/logo64.png" alt="Logo"> <!--img-thumbnail = bordure rounded = bord arrondi -->
+              </div>
+                  <li class="nav-item"><a href="/" class="nav-link text-white">Accueil</a></li>
+                  <li class="nav-item"><a href="/patient/home" class="nav-link text-white">Patient</a></li>
+                  <li class="nav-item"><a href="/mutuelle/home" class="nav-link text-white">Mutuelle</a></li>
+                  <li class="nav-item"><a href="*" class="nav-link text-white">Autres</a></li>
+  
+              </ul>
+  
+          </div>
+      </div>
+  </nav>
+  </header>
