--- a/views/patientHome.ejs
+++ b/views/patientHome.ejs
@@ -1,87 +1,68 @@
 <%- include('header') %>
-    
-    <div id="container">
-        <%- include('sidebar') %>
 
-            <div id="content">
-                <h1>Ajouter un patient</h1>
-                <form action="/patient/add" method="POST">
-                    <div class="row">
-                        <div class="col-sm-12 col-md-6">
-                            <div class="input-group fluid">
-                                <span class="tooltip" aria-label="Numéro de sécurité sociale"><label for="frmNumSecu">Numéro de sécurité sociale</label></span>
-                                <input type="text" name="num_secu_sociale" id="frmNumSecu" placeholder="Numéro de sécurité sociale">
-                            </div>
-                            <div class="input-group fluid">
-                                <span class="tooltip" aria-label="Nom"><label for="frmNom">Nom</label></span>
-                                <input type="text" name="nom_patient" id="frmNom" placeholder="Nom">
-                            </div>
-                            <div class="input-group fluid">
-                                <label for="frmPrenom">Prenom</label>
-                                <input type="text" name="prenom_patient" id="frmPrenom" placeholder="Prenom">
-                            </div>
-                            <div class="input-group fluid">
-                                <label for="frmDateNaissance">Date de Naissance</label>
-                                <input type="date" name="date_naissance" id="frmDateNaissance" placeholder="JJ/MM/AAAA">
-                            </div>
-                            <div class="input-group fluid">
-                                <label for="frmMutuelle">Mutuelle</label>
-                                <input type="text" name="id_mutuelle" id="frmMutuelle" placeholder="Mutuelle">
-                            </div>
-                        </div>
-                        <div class="col-sm-12 col-md-6">
-                            <div class="input-group fluid">
-                            <input type="submit" class="primary large" value="Ajouter"><br>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            
-    
-    <br>
-	<% if (data.length> 0) {%>
-		<h1>Liste des patients</h1>
-        <br>
-		<div>
-		<table class="border-fix">
-			<thead>
-				<tr>
-					<th scope="col"> Numéro de sécurité sociale</th>
-					<th scope="col"> Nom </th>
-					<th scope="col"> Prénom </th>
-					<th scope="col"> Date de Naissance </th>
-					<th scope="col"> Mutuelle </th>
-                    <th scope="col"></th>
-				</tr>
-			</thead>
-			<tbody>
-				<% for(let i=0; i < data.length; i++) {%>
-					<tr>
-						<td>
-                            <%= data[i].num_secu_sociale%>
-						</td>
-						<td>
-							<%= data[i].nom_patient%>
-						</td>
-						<td>
-							<%= data[i].prenom_patient%>
-						</td>
-						<td>
-							<%= data[i].date_naissance%>
-						</td>
-                        <td>
-							<%= data[i].id_mutuelle%>
-						</td>
 
-						<td>
-                            <a href="/patient/edit/<%= data[i].id_patient%>" class="button">Modifier<i class="far fa-edit"></i></a>
-                            <a href="/patient/delete/<%= data[i].id_patient%>" class="button">Supprimer<i class="fas fa-times"></i></a>
-					</tr>
-					<% } %>
-			</tbody>
-		</table>
-		</div>
-		<% } %> 
-    </div>
-    </div>
+<div class="container py-2 px-2 my-3">
+    <% if (data.length> 0) {%>        
+    <table class="table  table-hover "> 
+        <thead class="table-success table-bordered">                         
+            <tr>
+                <th scope="col"> Nom </th>
+                <th scope="col"> Prénom </th>
+                <th scope="col"> Date de Naissance </th>
+                <th scope="col"> Numéro de sécurité sociale</th>
+                <th scope="col"> Mutuelle </th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
+        <tbody>
+            <% for(let i=0; i < data.length; i++) {%>
+            <tr>
+                <td><%= data[i].nom_patient%></td>
+                <td><%= data[i].prenom_patient%></td>
+                <td><%= data[i].date_naissance%></td>
+                <td><%= data[i].num_secu_sociale%></td>
+                <td><%= data[i].id_mutuelle%></td>
+            <td>
+                <a class="btn" href="/patient/edit/<%= data[i].id_patient%>"><i class="bi bi-pencil-square"></i></a>
+                <a class="btn" href="/patient/delete/<%= data[i].id_patient%>" ><i class="bi bi-x-square"></i></a>
+            </td>
+            </tr>
+            <% } %>
+        </tbody>
+    </table>
+    <% } %> 
+</div>
+
+
+
+<div class="container mt-3 px-3 py-3 bg-light border border-3 rounded border-dark border-opacity-50">
+    
+    <h3 class="mb-3 pb-3 text-success border-bottom border-2 border-success border-opacity-50">Ajouter un nouveau patient</h3>
+    <form action="/patient/add" method="POST" class="row g-3 pt-3">
+        <div class="col-md-4">
+            <label class="form-label" for="nom_patient">Nom</label>
+            <input class="form-control" type="text" name="nom_patient" id="nom_patient">
+        </div>
+        <div class="col-md-4">
+            <label class="form-label" for="prenom_patient">Prenom</label>
+            <input class="form-control" type="text" name="prenom_patient" id="prenom_patient">
+        </div>
+        <div class="col-md-4">
+            <label class="form-label" for="date_naissance">Date de Naissance</label>
+            <input class="form-control" type="date" name="date_naissance" id="date_naissance">
+        </div>
+        <div class="col-md-8">
+            <label class="form-label" for="num_secu_sociale">Numéro de sécurité sociale</label>
+            <input class="form-control" type="text" name="num_secu_sociale" id="num_secu_sociale" placeholder="15 chiffres">
+        </div>
+        <div class="col-md-4">
+            <label class="form-label" for="id_mutuelle">Mutuelle</label>
+            <input class="form-control" type="text" name="id_mutuelle" id="id_mutuelle" placeholder="Identifiant de la mutuelle du patient">
+        </div>
+        <div class="col-md-12 text-end py-2">
+            <button class="btn btn-success" type="submit">Envoyer</button>
+        </div>
+    </form>
+</div> <!--Fin du container-->
+
 <%- include('footer') %>
