--- a/views/header.ejs
+++ b/views/header.ejs
@@ -28,6 +28,7 @@
                   <li class="nav-item"><a href="/" class="nav-link text-white">Accueil</a></li>
                   <li class="nav-item"><a href="/patient/home" class="nav-link text-white">Patient</a></li>
                   <li class="nav-item"><a href="/mutuelle/home" class="nav-link text-white">Mutuelle</a></li>
+                  <li class="nav-item"><a href="/medicament/home" class="nav-link text-white">Médicament</a></li>
                   <li class="nav-item"><a href="*" class="nav-link text-white">Autres</a></li>
   
               </ul>
