Commit final du code, ajout graphe visualisation des stocks et quantités prescrites

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -14,22 +14,24 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-success">
+    <nav class="navbar navbar-expand-lg bg-success shadow">
       <div class="container-fluid">
           <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
               <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="menu">
+          <div class="collapse navbar-collapse" id="menu"> -
   
               <ul class="navbar-nav d-flex align-items-lg-center">
                 <div class="w-25 float-start"><!--mx-auto = centrer l'img sur l'axe des x -->
                   <img class="img-fluid img-start mx-4"  src="/img/logo64.png" alt="Logo"> <!--img-thumbnail = bordure rounded = bord arrondi -->
               </div>
-                  <li class="nav-item"><a href="/" class="nav-link text-white">Accueil</a></li>
-                  <li class="nav-item"><a href="/patient/home" class="nav-link text-white">Patient</a></li>
-                  <li class="nav-item"><a href="/mutuelle/home" class="nav-link text-white">Mutuelle</a></li>
-                  <li class="nav-item"><a href="/medicament/home" class="nav-link text-white">Médicament</a></li>
-                  <li class="nav-item"><a href="*" class="nav-link text-white">Autres</a></li>
+                  <li class="nav-item navbar-brand"><a href="/" class="nav-link text-white">HOME</a></li>
+                  <li class="nav-item navbar-brand"><a href="/patient/home" class="nav-link text-white">Patients</a></li>
+                  <li class="nav-item navbar-brand"><a href="/mutuelle/home" class="nav-link text-white">Mutuelles</a></li>
+                  <li class="nav-item navbar-brand"><a href="/medicament/home" class="nav-link text-white">Médicaments</a></li>
+                  <li class="nav-item navbar-brand"><a href="/medecin/home" class="nav-link text-white">Médecins</a></li>
+                  <li class="nav-item navbar-brand"><a href="/pathologie/home" class="nav-link text-white">Pathologies</a></li>
+                  <li class="nav-item navbar-brand"><a href="/prescription/home" class="nav-link text-white">Prescriptions</a></li>
   
               </ul>
   
