--- a/views/patientHome.ejs
+++ b/views/patientHome.ejs
@@ -49,7 +49,7 @@
         </div>
         <div class="col-md-8">
             <label class="form-label" for="num_secu_sociale">Numéro de sécurité sociale</label>
-            <input class="form-control" type="text" name="num_secu_sociale" id="num_secu_sociale" placeholder="15 chiffres">
+            <input class="form-control" type="text" minlength="15" maxlength="15" name="num_secu_sociale" id="num_secu_sociale" placeholder="15 chiffres">
         </div>
         <div class="col-md-4">
             <label class="form-label" for="id_mutuelle">Mutuelle</label>
